# Canny-EVT

./: .gitignore  CMakeLists.txt  COPYRIGHT  ExtractBagNew.py  README.md  build_all.sh  build_all.zsh  build_all_debug.zsh  result.txt
Examples/Monocular/: DSO.yaml  MPL.yaml  MPL1.yaml  MPL2.yaml  MPL_vector.yaml  evo.yaml  evo_resolution.yaml  rpg.yaml  rpg_resolution.yaml
Examples/Stereo/: MPL.yaml  stereo_mpl.cc
cfg/: config.yaml  config_zzz.yaml  inv.py  system.perspective  system.rviz  system_mpl_new.yaml  system_mpl_old.yaml  system_mpl_vector.yaml  system_tum1.yaml  system_tum2.yaml  system_tum3.yaml  system_universal.yaml  system_upenn.yaml
cfg/calib_mpl/: Readme  left.yaml
cfg/calib_mpl/new/: left.yaml
cfg/calib_mpl/tum1/: left.yaml
cfg/calib_mpl/tum2/: left.yaml
doc/addons/: 01_installation.dox  02_how_to_use.dox  03_datasets.dox  04_how_to_contribute.dox  05_contact.dox  06_references.dox  mainpage.dox
example/ROS/src/evit_demo/: CMakeLists.txt  package.xml
example/ROS/src/evit_demo/src/: run_VECtor.cpp
example/ROS/src/prophesee_event_msgs/: CMakeLists.txt
include/: CamBasedProblemLM.h  EventCamera.h  EventProblemLM.h  Frame.h  GenericFunctor.h  KeyFrame.h  LogMacro.h  Optimizer.h  ProbabilityMapping.h  System.h  TimeSurface.h  type.h  utility.h
scripts/: calibrate.py  canny_edge.py  e2npy.py  generate_extrinsics.py  generate_projection.py  pnp_solver.py  time_surface_vis.py
scripts/for_evaluation/: compare.sh  compare_scale.sh  evaluate_ate.py  evaluate_rpe.py  gt.txt  preprocess.py  result.txt
scripts/for_evaluation/ok2compare/: gt.txt  result.txt
scripts/for_evaluation/result/: README  desk-10-10.txt  desk_15-10.txt  desk_1_10.txt  new_desk_1_10_annf_10_6.txt  new_desk_1_10_annf_10_6gt.txt  new_desk_3_10_annf_10_6.txt  new_desk_3_15annf_10_6.txt  new_sofa_1_10_annf_15_5.txt  new_sofa_3_10_annf_15_5.txt  new_sofa_3_15annf_15_5.txt  new_sofa_3_15annf_15_5.txtgt.txt  new_table_1-10-annf-15-5.txt  new_table_1_10.txt  new_table_1_10_5pre.txt  new_table_3-10annf-15-5.txt  new_table_3_15.txt  new_table_3_15annf_15-5.txt  new_talbe_3_10.txt  new_talbe_3_10gt.txt  old_cali_3_10.txt  old_cali_f_1_10.txt  old_cali_f_1_15.txt  old_cali_m_1_10.txt  old_cali_m_3-10.txt  old_cali_m_3_15.txt  old_mountain_10_10.txt  old_mountain_10_5.txt  old_mountain_15_10.txt  old_mountain_1_10.txt  old_sofa_15.txt  old_sofa_1_10.txt  old_tabe_15.txt  old_table_10_10.txt  old_table_10_3.txt  old_table_1_10.txt  old_table_1_10_annf_0_10.txt  old_table_1_10_annf_10_6.txt  old_table_3_10.txt  old_table_3_15.txt  (+11 more)
scripts/for_evaluation/result/deslam/new/sofa_slow/: gt.txt  result.txt
scripts/for_evaluation/result/deslam/old/mountain/: gt.txt  result.txt
scripts/for_evaluation/result/deslam/old/sofa/: result_.txt
scripts/for_evaluation/result/deslam/old/table/: gt.txt  result.txt
scripts/for_evaluation/result/devo/old/table/: result.txt
scripts/for_evaluation/test_evo/: gt.txt  result.txt
src/: CamBasedProblemLM.cpp  EventCamera.cpp  EventProblemLM.cpp  Frame.cpp  KeyFrame.cc  Optimizer.cpp  ProbabilityMapping.cc  System.cpp  TimeSurface.cpp  Tracking.cc  type.cpp  utility.cpp
